--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "prestart": "tsc server.ts",
-    "start": "node server.js",
+    "start": "http-server dist",
     "pretest": "tsc test.ts",
     "test": "node test.js",
     "premonitor": "tsc monitor.ts",
@@ -16,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.13.1",
     "dotenv": "^8.2.0",
+    "http-server": "14.1.1",
     "puppeteer": "^9.0.0",
     "typescript": "^4.2.4",
     "wait-port": "^0.2.9"
